# niksi

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: nix-check.yaml
cli/: Cargo.toml
cli/assets/: sample-niksi.json
cli/src/: main.rs
docs/: cli.md  user-guide.md
lib/: Cargo.toml
lib/src/: devcontainer.rs  docker.rs  lib.rs  open.rs
nix/devenv/: default.nix
nix/rust-overlay/: default.nix
