[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "niksi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
url = "2.5.2"
lib = { path = "../lib" }
tempfile = "3.14.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
